# mvaled.github.io

./: .dir-locals.el  .gitignore  Makefile  archives.html  authors.html  categories.html  conf.py  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  input.css  master.rst  pelicanconf.py  publishconf.py  pyproject.toml  tags.html
author/: manuel-vazquez-acosta.html  manuel-vazquez-acosta2.html  manuel-vazquez-acosta3.html  manuel-vazquez-acosta4.html  manuel-vazquez-acosta5.html  manuel-vazquez-acosta6.html  manuel-vazquez-acosta7.html
category/: 2025.html  ai-programming.html  architecture.html  blog.html  blogroll.html  book-reviews.html  linux.html  management.html  misc.html  openerp.html  programming-llms.html  programming-technical-debt.html  programming.html  programming3.html  python.html  tools-ai.html  web-development.html
content/: a-failing-fail-in-the-monad-list.rst  apples-and-oranges.rst  composing-iterator-returning-functions.rst  foldl-in-terms-of-foldr.rst  generating-unique-static-urls-in-odoo.rst  greenlet-local-python-modules-an-experiment.rst  integration-v-automation.rst  lately.rst  odoo-at-last.rst  odoo-bus-implementation.rst  odoo.rst  performance-of-python-list-comprehensions.rst  progress-in-the-move.rst  rememoring-microservices.rst  repost-the-productivity-of-tomorrow-trumps-that-of-today.rst  reviewing-openerp-8-0.rst  tdd-is-dead-rally.rst  uncurated-notes-about-cycle-js.rst  welcome.rst
drafts/: adding-code.html  all-things-distributed.html  all-things-distributed.rst  business-rules.rst  (+13 more)
(+259 files in other folders)
