[project]
name = "mvaled-github-io"
version = "0.1.0"
description = "Manuel on Software - Reloaded"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pelican[markdown]",
    "beautifulsoup4",
    "typogrify",
]

[tool.pelican]
path = "content"
output = "output"
theme = "theme"
sitename = "Manuel on Software - Reloaded"
siteurl = "http://mvaled.github.io"
author = "Manuel Vázquez Acosta"
timezone = "UTC"
default_lang = "en"
article_url = "{date:%Y}/{date:%m}/{date:%d}/{slug}.html"
article_save_as = "{date:%Y}/{date:%m}/{date:%d}/{slug}.html"
